--- a/SolarArduino/platformio.ini
+++ b/SolarArduino/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.11.7
+	adafruit/Adafruit SSD1306@^2.5.7
