--- a/SolarArduino/platformio.ini
+++ b/SolarArduino/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:uno]
 platform = atmelavr
-board = uno
+board = nanoatmega328
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.7
