--- a/SolarArduino/platformio.ini
+++ b/SolarArduino/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.7
 	adafruit/Adafruit SSD1306@^2.5.7
+	olikraus/U8g2@^2.35.7
