--- a/SolarArduino/platformio.ini
+++ b/SolarArduino/platformio.ini
@@ -10,9 +10,10 @@
 
 [env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega328
+board = megaatmega2560
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.7
 	adafruit/Adafruit SSD1306@^2.5.7
 	olikraus/U8g2@^2.35.7
+platform_packages =
