--- a/SolarArduino/platformio.ini
+++ b/SolarArduino/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:nanoatmega328]
 platform = atmelavr
-board = megaatmega2560
+board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.7
