--- a/SolarArduino/platformio.ini
+++ b/SolarArduino/platformio.ini
@@ -12,8 +12,5 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit GFX Library@^1.11.7
-	adafruit/Adafruit SSD1306@^2.5.7
-	olikraus/U8g2@^2.35.7
+lib_deps = olikraus/U8g2@^2.35.7
 platform_packages =
